# smartdocs_v3

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CUSTOM_FACT_EXTRACTION.md  CUSTOM_PROVIDER_GUIDE.md  DATABRICKS_COMPATIBILITY_FIX.md  Diff.md  FINAL_FIX_SUMMARY.md  Home.py  IMPLEMENTATION_SUMMARY.md  PAGE_NUMBER_FIX_SUMMARY.md  PDF_HIGHLIGHTING_FIX_SUMMARY.md  QUICK_START_FACT_EXTRACTION.md  RAG_AGENT_IMPLEMENTATION.md  RAG_CONSOLIDATION_SUMMARY.md  README.md  RERANKER_FALLBACK_CHECKLIST.md  RERANKER_FALLBACK_IMPLEMENTATION.md  REVIEW_MODE_FIXES.md  SmartReview.py  import_test.py  requirements.txt  simple_fact_test.py  test_billion_regex.py  test_conditional_workflow.py  test_custom_fact_extraction.py  test_decomposition_rag_params.py  test_fact_extraction.py  test_fact_extraction_fix.py  test_langextract_integration.py  test_mock_facts.py  test_smartreview_fixes.py
docs/: BATCH_OPTIMIZATION.md  LLM_RERANKER_NO_TRUNCATION.md  RERANKER_FALLBACK.md  RERANKER_QUICK_START.md
langextract-databricksprovider/: README.md  pyproject.toml  test_plugin.py
langextract-databricksprovider/langextract_databricksprovider/: __init__.py  provider.py  schema.py
pages/: 1_📄_CNT_space.py
src/: __init__.py
src/keyword_code/: __init__.py  app.py  config.py
src/keyword_code/agents/: __init__.py  fact_extraction_agent.py  rag_agent.py  review_evaluator.py  review_orchestrator.py  review_scoring.py  review_tools.py  review_types.py
src/keyword_code/ai/: __init__.py  analyzer.py  chat.py  (+2 more)
tests/: test_bbox_preservation.py  test_rag_retry_integration.py  test_reranker_fallback.py
(+25 files in other folders)
